        and linking to source code locations). [b4]
      - :downloads now opens a download list in the multi-line output
        buffer. Added -sort flag. [b6][b7]
      - :style now supports regexp site-filters on Firefox 6+. [b7]
      - :qa closes only the current window, per Vim. [b7]
      - Added :background command. [b8]
      - Added -id flag to :bmark command and changed updating semantics. [b8]
      - Added :exit command. [b7]
      - Added :dlclear command. [b7]
      - :extensions has been replaced with a more powerful :addons. [b6]
      - :javascript! now opens a Read Eval Print Loop. [b6]
      - Added -arg flag to :map. [b6]
      - Added -literal flag to :command. [b6]
      - Added :completions command. [b6]
      - Added :cookies command. [b3]
      - :extadd now supports remote URLs as well as local files on Firefox 4. [b2]
      - Added :if/:elseif/:else/:endif conditionals. [b3]
      - Added -charset and -post to :bmark. [b5]
      - Added -keyword, -tags, -title to :delbmarks. [b2]
      - Added :extrehash, :exttoggle, :extupdate, and :rehash commands. [b5]
      - :abclear, :comclear and :mapclear have been substituted by a bang now
        accepted by :unabbreviate, :delcommand and :unmap, respectively. [b6]
      - Added :feedkeys command. [b4]
      - Added -sort option to :history. [b4]
      - Added several new options, including -javascript, to :abbreviate and
        :map. [b2]
      - Added :mksyntax command to auto-generate Vim syntax files. [b4]
      - Added 's' and 'e' flags to :pageinfo command. [b7]
      - Added :pintab and :unpintab commands. [b7]
      - Extension manipulation commands, including :extenable, :extdisable,
        and :exttoggle, now accept a -types argument. [b7]
      - :tabmove now moves to the position of tab N, not after it.
        Without arguments it no longer moves the tab to the end of
        the list. [b7]
      - :open now only opens files beginning with /, ./, ../, or ~/ [b1]